--- a/frontend/src/app/styles/global.css
+++ b/frontend/src/app/styles/global.css
@@ -4,7 +4,7 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-    --font-primary: "Inter Variable", sans-serif;
+    --font-primary: "Montserrat Variable", sans-serif;
     --font-sans: "Open Sans Variable", sans-serif;
     --radius-sm: calc(var(--radius) - 4px);
     --radius-md: calc(var(--radius) - 2px);
